add site in readme

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 ## Color Match Game
 
 - match a color within 100 secs and you can win the game
+
+## DEMO
+
+https://arishavelle18.github.io/Color-Match-Game/
